bug: 45063 - Twilight skin wrong colour calendar header text in search
http://bugzilla.zimbra.com/show_bug.cgi?id=45063

Copied from Perforce
 Change: 229132

--- a/WebRoot/skins/lake/skin.css
+++ b/WebRoot/skins/lake/skin.css
@@ -118,3 +118,7 @@ body	{  @ChromeBg@ }
 .ZOptionsSectionTable .ZToolbarButtonTable .ZWidgetTitle {
 	color: #333;
 }
+
+.ZmPickerOverview .DwtCalendarTitle {
+	 color: #ffffff;
+}
