--- a/WebRoot/skins/pebble/skin.css
+++ b/WebRoot/skins/pebble/skin.css
@@ -107,3 +107,7 @@ body	{  @ChromeBg@ }
 .ZOptionsSectionTable .ZToolbarButtonTable .ZWidgetTitle {
 	color: #333;
 }
+
+.ZmPickerOverview .DwtCalendarTitle {
+	 color: #ffffff;
+}
