--- a/WebRoot/skins/twilight/skin.css
+++ b/WebRoot/skins/twilight/skin.css
@@ -168,4 +168,10 @@ body, #skin_container_splash_screen	{
 	cursor: pointer;
 }
 
-.ZDToolBar .ZWidgetTitle { color: white; }
+.ZDToolBar .ZWidgetTitle {
+	color: ffffff;
+}
+
+.ZmPickerOverview .DwtCalendarTitle {
+	 color: #ffffff;
+}
